added methods to handle lenta.com

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,6 +40,16 @@
                             </button>
                         </div>
                     </form>
+                    <form th:action="@{/excel/lenta}" th:method="post" enctype="multipart/form-data">
+                        <div class="">
+                            <br>
+                            <input type="file" class="form-control" name="file">
+                            <br>
+                            <button class="btn btn-primary">
+                                Lenta
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
