--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,75 +5,23 @@
     <title>Home</title>
 </head>
 <body>
-<div th:replace="_header :: content"></div>
-<div class="container">
-    <div class="row mb-3">
-        <div class="col-md-8 themed-grid-col">
-            <div class="row">
-                <div class="col-md-6 themed-grid-col">
-                    <form th:action="@{/excel/stat/detmirStats}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Статистика detmir.ru-2
-                            </button>
-                        </div>
-                    </form>
-                    <form th:action="@{/excel/vlook}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Vlook
-                            </button>
-                        </div>
-                    </form>
-                    <form th:action="@{/excel/megatop}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Megatop
-                            </button>
-                        </div>
-                    </form>
-                    <form th:action="@{/excel/lenta}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Lenta
-                            </button>
-                        </div>
-                    </form>
-                    <form th:action="@{/excel/lentaReport}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Lenta report
-                            </button>
-                        </div>
-                    </form>
-                    <form th:action="@{/excel/simpleReport}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Simple report
-                            </button>
-                        </div>
-                    </form>
+<div th:replace="/include/_header :: content"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div th:replace="/include/sidebar :: sidebar"></div>
+            </div>
+            <div class="col-sm-9">
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+
+
+
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
