--- a/src/main/resources/templates/clients/lenta.html
+++ b/src/main/resources/templates/clients/lenta.html
@@ -16,46 +16,53 @@
                 <blockquote class="blockquote">
                     <p>Lenta</p>
                 </blockquote>
-                <div class="col-6 col-sm-6">
+                <div class="col-6 col-sm-4">
                     <form th:action="@{/excel/lenta}" th:method="post" enctype="multipart/form-data">
-                        <div class="">
+                        <div class="row">
                             <br>
                             <input type="file" class="form-control" name="file">
-                            <br>
-                            <button class="btn btn-primary">
-                                Обработка файла задания
-                            </button>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-6 col-sm-8">
+                                <button class="btn btn-primary">
+                                    Обработка задания.
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
 
-                <!--                <h1>Format ISO</h1>-->
-                <!--                <p th:text="${#dates.formatISO(standardDate)}"></p>-->
-                <!--                <p th:text="${#temporals.formatISO(localDateTime)}"></p>-->
-                <!--                <p th:text="${#temporals.formatISO(localDate)}"></p>-->
-                <!--                <p th:text="${#temporals.formatISO(timestamp)}"></p>-->
-
-                <div class="col-6 col-sm-6">
-                    <form th:action="@{/excel/lentaReport}" th:method="post" th:object="${lenta}"
-                          enctype="multipart/form-data">
-                        <div class="">
-                            <div>
-                                <label for="end-of-action">Date end action:</label>
-                                <input type="date" th:field="${lenta.afterDate}" id="end-of-action"/>
+                <div class="col-6 col-sm-8">
+                    <form th:action="@{/excel/lentaReport}" th:method="post" th:object="${lenta}" enctype="multipart/form-data">
+                        <div class="row align-items-center">
+                            <div class="col-sm-6">
+                                <input type="file" class="form-control" name="file">
                             </div>
-                            <br>
-                            <input type="file" class="form-control" name="file">
-                            <br>
-                            <button type="submit" class="btn btn-primary">
-                                Обработка отчета перед отправкой
-                            </button>
+                            <div class="col-sm-4">
+                                <div class="row align-items-center">
+                                    <div class="col-8 col-sm-3">
+                                        <label for="date">Date</label>
+                                    </div>
+                                    <div class="col-4 col-sm-9">
+                                        <input type="date" th:field="${lenta.afterDate}" id="date"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-6 col-sm-8">
+                                <button type="submit" class="btn btn-primary">
+                                    Обработка отчета.
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
