--- a/src/main/resources/templates/clients/simple.html
+++ b/src/main/resources/templates/clients/simple.html
@@ -18,17 +18,20 @@
                 </blockquote>
                 <div class="col-12 col-sm-6">
                     <fieldset>
-                    <form th:action="@{/excel/simpleReport}" th:method="post" enctype="multipart/form-data">
-                        <legend>Простая обработка отчета клиента simple.ru</legend>
-                        <div class="">
-                            <br>
-                            <input type="file" class="form-control" name="file">
+                        <form th:action="@{/excel/simpleReport}" th:method="post" enctype="multipart/form-data">
+                            <label for="simple_report" class="form-label">Простая обработка отчета клиента
+                                simple.ru</label>
+                            <div class="">
+                                <input type="file" class="form-control form-control-sm" name="file" id="simple_report"
+                                       aria-describedby="simpleHelp">
+                                <div id="simpleHelp" class="form-text">Выберите оригинальный файл отчета для обработки
+                                </div>
+                            </div>
                             <br>
                             <button class="btn btn-primary">
-                                Simple report
+                                Загрузить
                             </button>
-                        </div>
-                    </form>
+                        </form>
                     </fieldset>
                 </div>
             </div>
