add reports info for statistic added users

--- a/src/main/resources/templates/clients/lenta.html
+++ b/src/main/resources/templates/clients/lenta.html
@@ -40,7 +40,9 @@
                         <div class="input-group mb-3">
                             <input type="file" class="form-control" name="file" id="lentaReport" placeholder="file">
                             <span class="input-group-text"> Удалить акции старше </span>
-                            <input type="date" th:field="${lenta.afterDate}"/>
+                            <label>
+                                <input type="date" th:field="${lenta.afterDate}"/>
+                            </label>
                         </div>
 
 
