Add checkbox showCompetitorUrl

--- a/src/main/resources/templates/clients/detmir.html
+++ b/src/main/resources/templates/clients/detmir.html
@@ -32,6 +32,12 @@
                                     Заменить источник для клиента
                                 </label>
                             </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="showCompetitorUrl" name="showCompetitorUrl" value="1">
+                                <label class="form-check-label" for="showCompetitorUrl">
+                                    Показать URL конкурента
+                                </label>
+                            </div>
                             <br>
                             <button class="btn btn-primary">
                                 Статистика detmir.ru-2
