--- a/src/main/resources/templates/clients/megatop.html
+++ b/src/main/resources/templates/clients/megatop.html
@@ -27,7 +27,7 @@
                             </div>
                             <br>
                             <button class="btn btn-primary">
-                                Загрузка
+                                Загрузить
                             </button>
                         </div>
                     </form>
