--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -24,14 +24,14 @@
                     Megatop
                 </a>
             </li>
-            <li>
-                <a href="/clients/detmir" class="nav-link link-dark">
-                    <svg class="bi me-2" width="16" height="16">
-                        <use xlink:href="#table"/>
-                    </svg>
-                    Detmir
-                </a>
-            </li>
+<!--            <li>-->
+<!--                <a href="/clients/detmir" class="nav-link link-dark">-->
+<!--                    <svg class="bi me-2" width="16" height="16">-->
+<!--                        <use xlink:href="#table"/>-->
+<!--                    </svg>-->
+<!--                    Detmir-->
+<!--                </a>-->
+<!--            </li>-->
             <li>
                 <a href="/clients/simple" class="nav-link link-dark">
                     <svg class="bi me-2" width="16" height="16">
