Add checkbox showDateAdd

--- a/src/main/resources/templates/util/index.html
+++ b/src/main/resources/templates/util/index.html
@@ -45,7 +45,7 @@
                                 <input class="form-check-input" type="checkbox" id="showSource" name="showSource"
                                        value="1">
                                 <label class="form-check-label" for="showSource">
-                                    Оставить столбец с источником прописи
+                                    Кто прописал
                                 </label>
                             </div>
                             <div class="form-check">
@@ -59,9 +59,17 @@
                                 <input class="form-check-input" type="checkbox" id="showCompetitorUrl"
                                        name="showCompetitorUrl" value="1">
                                 <label class="form-check-label" for="showCompetitorUrl">
-                                    Показать URL конкурента
+                                    URL конкурента
                                 </label>
                             </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="showDateAdd"
+                                       name="showDateAdd" value="1">
+                                <label class="form-check-label" for="showDateAdd">
+                                    Дата добавления
+                                </label>
+                            </div>
+
                             <br>
                             <button class="btn btn-primary">
                                 Загрузить
