--- a/src/main/resources/templates/util/index.html
+++ b/src/main/resources/templates/util/index.html
@@ -80,9 +80,9 @@
                 <div class="row">
                     <form th:action="@{/excel/getUrl/}" th:method="post" enctype="multipart/form-data">
                         <br>
-                        <label for="fileStatistic" class="form-label">Сбор ссылок</label>
+                        <label for="getUrl" class="form-label">Сбор ссылок</label>
                         <div>
-                            <input type="file" class="form-control form-control-sm" name="file" id="fileStatistic">
+                            <input type="file" class="form-control form-control-sm" name="file" id="getUrl">
                             <br>
                             <button class="btn btn-primary">
                                 Загрузить
